Fixed issue with icons alignment in smaller devices

--- a/css/style.css
+++ b/css/style.css
@@ -163,6 +163,7 @@ a:active{
 	.summary {
 		font-size: 1.38em;
 	}
+  
 	.profile-pic {
 		display: block;
 		margin: auto;
@@ -179,6 +180,7 @@ a:active{
 	.header-content h1 {
 		font-size: 3.5em;
 	}
+  
 	.header-content h2 {
 		font-size: 2em;
 	}
@@ -188,13 +190,13 @@ a:active{
 	.header-content h1 {
 		font-size: 2.8em;
 	}
+  
 	.header-content h2 {
 		font-size: 1.5em;
 	}
-}
-
-@media (max-width: 350px) {
-	.icon {
+  
+  .icon {
 		font-size: 4em !important;
+    margin: 15px;
 	}
 }
